# gemini-cli-templates

./: .env.example  CONTRIBUTING.md  DESIGN.md  GEMINI.md  README.md  REQUIREMENTS.md  SECURITY.md  TASKS.md  fix-yaml.js  fix_security_structural.py  package-lock.json  package.json  security-report.json  vercel.json  verify_changes.js
.github/: WORKFLOWS_REFERENCE.md
api/: README.md  _parser-gemini.js  claude-code-check.js  gemini-cli-check.js  gemini-code-check.js  index.html  package-lock.json  package.json
cli-tool/: .npmrc  Makefile  README.md  SKILLS_DASHBOARD.md  TESTING.md  data_cache_error.txt  data_cache_fail.txt  jest.config.js  package-lock.json  package.json  perf_mon_fail.txt  performance_test_output.txt  ref_val_fail.txt  security-report.json  test-commands.sh  test-detailed.sh  test_output.txt  total_test_output.txt  validation_fail.txt
cli-tool/templates/grafka/crates/semantic-engine/: Cargo.toml
cli-tool/templates/grafka/crates/semantic-engine/proto/: semantic_engine.proto
cli-tool/templates/grafka/crates/semantic-engine/src/: lib.rs  main.rs  persistence.rs  server.rs
docs/: GEMINI.md  README.md  _config.yml  claude-jobs.json  component.html  components-metadata.json  download-stats.html  gemini-jobs.json  index.html  jobs.html  plugin.html  robots.txt  sandbox-interface.html  sitemap.xml  trending-data.json  trending.html  vercel.json  workflows.html
docu/: docusaurus.config.ts
example-project/: README.md  SECURITY_AUDIT.md  package.json
full-test/: .mcp.json
my-simulator/: .mcp.json
rust-demo/: Cargo.toml  test.txt
(+1687 files in other folders)
