[package]
name = "semantic-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "semantic-engine"
path = "src/main.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[build-dependencies]
tonic-build = "0.11"
