[package]
name = "semantic-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "semantic-engine"
path = "src/main.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[build-dependencies]
tonic-build = "0.11"
